--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            DyBlog
 description:      Your site description...
-copyright:        Your Name
+copyright:        Dy
 url: # add your custom site url (format: https://example.com)
 
 
