--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,12 @@ sass:
 
 permalink: /:categories/:year-:month-:day/:title.html
 
+  var:
+  - key: rel
+    value: 'shortcut icon'
+  - key: href
+    value: //github.com/IchtrafSIE/IchtrafSIE.github.io/blob/master/images/header/favicon.ico
+  
 # Amount of post to show on home page
 paginate: 5
 
