--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@ sass:
 
 permalink: /:categories/:year-:month-:day/:title.html
 
-head: # 删改前确定知道自己在做什么
+head:
 - tag: link # 小图标，同上
   var:
   - key: rel
     value: 'shortcut icon'
   - key: href
-    value: /images/header/favicon.ico
+    value: //github.com/IchtrafSIE/IchtrafSIE.github.io/blob/master/images/header/favicon.ico
   
 # Amount of post to show on home page
 paginate: 5
